fix: button width larger than that of container
when button text too long, which caused resposive ui incorrect

--- a/vtr-ui/src/app/components/ui/ui-button/ui-button.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-button/ui-button.component.scss
@@ -21,6 +21,7 @@
 			text-align: center;
 			text-decoration: none;
 			display: inline-block;
+			max-width: 100%;
 
 			&:hover {
 				background: $blue_gradient;
