--- a/vtr-ui/src/app/components/ui/ui-description-button/ui-description-button.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-description-button/ui-description-button.component.scss
@@ -1,3 +1,15 @@
 p {
-    margin: 0rem;
+	margin: 0rem;
+}
+
+vtr-ui-button {
+	max-width: 100%;
+}
+
+.max-width-50 {
+	max-width: 50%;
+}
+
+.max-width-40 {
+	max-width: 40%;
 }
